# old-librarian

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tasks.py
librarian/: api.py  download.py
librarian/config/: database.py  orator.yml
librarian/migrations/: 2019_01_08_131644_create_summaries_table.py
librarian/models/: summary.py
librarian/templates/: base.html  book.html  index.html  search.html
tests/: test_librarian.py
