[tool.poetry]
name = "librarian"
version = "0.1.0"
description = ""
authors = ["kk6 <hiro.ashiya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bocadillo = "^0.9.1"
orator = "^0.9.8"
requests = "^2.21"
tqdm = "^4.29"
dateparser = "^0.7.0"
mysqlclient = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.13"
invoke = "^1.2"
litecli = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
